# deallocate-zeroed

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
crates/fuzzing/: Cargo.toml
crates/fuzzing/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ops.rs
src/: default.rs  lib.rs  zero_aware_allocator.rs
src/zero_aware_allocator/: mutex.rs
