[package]
name = "deallocate-zeroed-fuzzing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deallocate-zeroed = { path = "../..", features = ["allocator_api", "zero_aware_allocator"] }
log = "0.4.22"
mutatis = { version = "0.3.1", features = ["check", "derive"] }

[dev-dependencies]
env_logger = "0.11.6"
