[package]
name = "deallocate-zeroed-fuzzing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = { workspace = true }
deallocate-zeroed = { path = "../..", features = ["allocator_api", "zero_aware_allocator"] }
log = { workspace = true }
mutatis = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
